--- a/src/App.css
+++ b/src/App.css
@@ -16,23 +16,22 @@
 
 
 :root {
-  --color-neutral-900: #091540;
-  --color-neutral-800: #202535;
-  --color-neutral-700: #2F364B;
-  --color-neutral-600: #535868;
-  --color-neutral-300: #c6C6C6;
-  --color-neutral-200: #D6E2F5;
-  --color-neutral-100: #EEEEEE;
-  --color-neutral-0: #Fbfdfe;
+  
+  --fourth-color: #c6C6C6;
+  --third-color: #D6E2F5;
+  --secondary-color: #EEEEEE;
+  --primary-color: #Fbfdfe;
   --color-red-400: #F25C54;
   --color-red-500: #DE4840;
   --color-red-700: #C7231A; 
 
-  --light-gradient: linear-gradient(180deg, #EBF2FC 0%, #EEFBF9 100%);
-  --dark-gradient: linear-gradient(180deg, #04091B 0%, #091540 100%);
+  --gradient: linear-gradient(180deg, #EBF2FC 0%, #EEFBF9 100%);
+ 
+  --primary-text-color: #091540;
+  --secondary-text-color: #535868;
 
   --text-preset-1: 2.125rem; /* 34px */
-  --text-preset-2: 1.25;     /* 20px */ 
+  --text-preset-2: 1.25rem;     /* 20px */ 
   --text-preset-3: 1rem;     /* 16px */ 
   
 
@@ -65,6 +64,18 @@
 
 }
 
+[data-theme='dark'] {
+  --fourth-color: #091540;
+  --third-color: #202535;
+  --secondary-color: #2F364B;
+  --primary-color: #535868;
+
+  --primary-text-color: #Fbfdfe;
+  --secondary-text-color: #c6C6C6;
+
+  --gradient: linear-gradient(180deg, #04091B 0%, #091540 100%);
+}
+
 
 *,
 *::before,
@@ -76,7 +87,7 @@
 
 body {
   font-family: 'NotoSans';
-  background: var(--light-gradient);
+  background: var(--gradient);
 }
 
 button {
@@ -88,12 +99,17 @@ button:focus, button:active {
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
   padding-block-start: var(--spacing-250);
   padding-block-end: var(--spacing-800);
   padding-inline: var(--spacing-200);
 }
 
 .header-container {
+  width: 100%;
   max-width: 73.125rem;
   display: flex;
   justify-content: space-between;
@@ -101,9 +117,9 @@ button:focus, button:active {
   padding-block: var(--spacing-100);
   padding-inline: var(--spacing-150);
   border-radius: var(--radius-10);
-  background-color: var(--color-neutral-0);
+  background-color: var(--primary-color);
   margin-block-end: var(--spacing-500);
-  border: 1px solid var(--color-neutral-200);
+  border: 1px solid var(--third-color);
   box-shadow: 2px 0px 3px 0px #D9E5F4;
 }
 
@@ -115,12 +131,12 @@ button:focus, button:active {
   width: 50px;
   height: 50px;
   border: none;
-  background-color: var(--color-neutral-100);
+  background-color: var(--secondary-color);
   border-radius: 10px;
 }
 
 .toggle-theme-btn:hover {
-  background-color: var(--color-neutral-300);
+  background-color: var(--fourth-color);
 }
 
 /* main content styles */
@@ -132,7 +148,10 @@ button:focus, button:active {
   max-width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: var(--spacing-300);
+  margin-block-end: var(--spacing-500);
 }
 
 .main-content-header > h1 {
@@ -140,6 +159,7 @@ button:focus, button:active {
   font-size: var(--text-preset-1);
   line-height: 1;
   font-weight: 700;
+  color: var(--primary-text-color);
 }
 
 .main-content-navbar {
@@ -147,21 +167,187 @@ button:focus, button:active {
   max-width: 18.438rem;
   justify-content: space-evenly;
   align-items: center;
+  gap: var(--spacing-150);
 }
 
 .main-content-navbar > button {
   font-size: var(--text-preset-2);
-  border: none;
-  background-color: var(--color-neutral-0);
+  color: var(--primary-text-color);
+  background-color: var(--primary-color);
   padding-inline: var(--spacing-250);
   padding-block-start: var(--spacing-100);
   padding-block-end: var(--spacing-125);
   border-radius: var(--radius-full);
-  border: 1px solid var(--color-neutral-200);
+  border: 1px solid var(--third-color);
   box-shadow: 2px 0px 3px 0px #D9E5F4;
 }
 
 .main-content-navbar > button:hover {
   background-color: var(--color-red-700);
-  color: var(--color-neutral-0);
+  color: var(--primary-color);
+}
+
+.extensions-container {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--spacing-150);
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.extension-container {
+  max-width: 21.625rem;
+  min-height: 12.5rem;
+  display: flex;
+  flex-direction: column;
+  padding-block: var(--spacing-250);
+  padding-inline: var(--spacing-250);
+  gap: var(--spacing-300);
+  background-color: var(--primary-color);
+  border: 1px solid var(--third-color);
+  border-radius: var(--radius-20);
+  box-shadow: 0px 2px 2px 0px #c2cee1;
+}
+
+.icon-and-description {
+  display: flex;
+  gap: var(--spacing-200);
+  margin-block-end: 46px;
+}
+
+.extension-icon {
+  width: 60px;
+  height: 60px;
+}
+
+.extension-name {
+  font-size: var(--text-preset-2);
+  font-weight: 700;
+  line-height: 1.2;
+  color: var(--primary-text-color);
+  margin-block-end: var(--spacing-100);
+}
+
+.extension-description {
+  font-size: var(--text-preset-3);
+  line-height: 1.4;
+  color-interpolation-filters: var(--secondary-text-color);
+  font-weight: 400;
+}
+
+.extension-btns {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.remove-btn {
+  color: var(--primary-text-color);
+  font-size: var(--text-preset-3);
+  line-height: 1.4;
+  font-weight: 500;
+  padding-inline: var(--spacing-200);
+  padding-block: var(--spacing-100);
+  border-radius: var(--radius-full);
+  border: 1px solid var(--fourth-color);
+  background-color: var(--primary-color);
+}
+
+.remove-btn:hover {
+  background-color: var(--color-red-700);
+  color: var(--primary-color);
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  width: 36px;
+  height: 20px;
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  /* right: 0; */
+  /* bottom: 7px; */
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider-btn:checked + .slider {
+  background-color: var(--color-red-700);
+}
+
+.slider-btn:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+.slider-btn:checked + .slider::before {
+  -webkit-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  transform: translateX(16px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.slider-btn:focus-visible + .slider {
+  outline: 2px solid var(--color-red-400);
+}
+
+@media (min-width: 768px) {
+
+  #root {
+    padding-block-start: var(--spacing-300);
+    padding-inline: var(--spacing-400);
+  }
+
+  .main-content-header {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1440px) {
+
+  #root {
+    padding-block-start: var(--spacing-500);
+    padding-inline: 8.438rem;
+  }
+
+  .extension-container {
+    max-width: 23.875rem;
+  }
 }
